test/typecheck/errors/bad-views7.boa
view sv5 {
	o: output sum of int;
}

v := sv5/o;

c := v._2;
